--- a/DIYET_PROJE/DIYET_PROJE.csproj
+++ b/DIYET_PROJE/DIYET_PROJE.csproj
@@ -459,6 +459,12 @@
       <Name>Entities</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\TİKKKK.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\YENİTİKKKK.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
     <PropertyGroup>
